--- a/501_550.md
+++ b/501_550.md
@@ -956,7 +956,534 @@ Therefore, Option B is the most cost-effective solution.
 
 </details>
 
+<details>
+  <summary>Question 521</summary>
 
+A retail company has several businesses.
+The IT team for each business manages its own AWS account.
+Each team account is part of an organization in AWS Organizations.
+Each team monitors its product inventory levels in an Amazon DynamoDB table in the team's own AWS account.
+The company is deploying a central inventory reporting application into a shared AWS account.
+The application must be able to read items from all the teams' DynamoDB tables.
+Which authentication option will meet these requirements MOST securely?
+
+-   [ ] A.
+    Integrate DynamoDB with AWS Secrets Manager in the inventory application account.
+    Configure the application to use the correct secret from Secrets Manager to authenticate and read the DynamoDB table.
+    Schedule secret rotation for every 30 days.
+-   [ ] B.
+    In every business account, create an IAM user that has programmatic access.
+    Configure the application to use the correct IAM user access key ID and secret access key to authenticate and read the DynamoDB table.
+    Manually rotate IAM access keys every 30 days.
+-   [ ] C.
+    In every business account, create an IAM role named BU_ROLE with a policy that gives the role access to the DynamoDB table and a trust policy to trust a specific role in the inventory application account.
+    In the inventory account, create a role named APP_ROLE that allows access to the STS AssumeRole API operation.
+    Configure the application to use APP_ROLE and assume the crossaccount role BU_ROLE to read the DynamoDB table.
+-   [ ] D.
+    Integrate DynamoDB with AWS Certificate Manager (ACM).
+    Generate identity certificates to authenticate DynamoDB.
+    Configure the application to use the correct certificate to authenticate and read the DynamoDB table.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C.
+    In every business account, create an IAM role named BU_ROLE with a policy that gives the role access to the DynamoDB table and a trust policy to trust a specific role in the inventory application account.
+    In the inventory account, create a role named APP_ROLE that allows access to the STS AssumeRole API operation.
+    Configure the application to use APP_ROLE and assume the crossaccount role BU_ROLE to read the DynamoDB table.
+
+Why these are the correct answers:
+
+C.
+In every business account, create an IAM role named BU_ROLE with a policy that gives the role access to the DynamoDB table and a trust policy to trust a specific role in the inventory application account.
+In the inventory account, create a role named APP_ROLE that allows access to the STS AssumeRole API operation.
+Configure the application to use APP_ROLE and assume the crossaccount role BU_ROLE to read the DynamoDB table.
+
+-   [ ] IAM roles provide secure cross-account access by allowing the application to assume a role in each business account.
+-   [ ] This method avoids sharing or embedding long-term credentials.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    Secrets Manager is for storing secrets, not for cross-account authentication for DynamoDB access.
+-   [ ] B.
+    Sharing IAM user credentials (access keys) is insecure and requires manual rotation.
+-   [ ] D.
+    ACM is for managing SSL/TLS certificates, not for DynamoDB authentication.
+
+Therefore, Option C is the most secure solution.
+
+</details>
+<details>
+  <summary>Question 522</summary>
+
+A company runs container applications by using Amazon Elastic Kubernetes Service (Amazon EKS).
+The company's workload is not consistent throughout the day.
+The company wants Amazon EKS to scale in and out according to the workload.
+Which combination of steps will meet these requirements with the LEAST operational overhead?
+(Choose two.)
+
+-   [ ] A.
+    Use an AWS Lambda function to resize the EKS cluster.
+-   [ ] B.
+    Use the Kubernetes Metrics Server to activate horizontal pod autoscaling.
+-   [ ] C.
+    Use the Kubernetes Cluster Autoscaler to manage the number of nodes in the cluster.
+-   [ ] D.
+    Use Amazon API Gateway and connect it to Amazon EKS.
+-   [ ] E.
+    Use AWS App Mesh to observe network activity.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B.
+    Use the Kubernetes Metrics Server to activate horizontal pod autoscaling.
+-   [ ] C.
+    Use the Kubernetes Cluster Autoscaler to manage the number of nodes in the cluster.
+
+Why these are the correct answers:
+
+B.
+Use the Kubernetes Metrics Server to activate horizontal pod autoscaling.
+
+-   [ ] Kubernetes Metrics Server collects resource usage data, enabling horizontal pod autoscaling to scale pods within the cluster.
+
+C.
+Use the Kubernetes Cluster Autoscaler to manage the number of nodes in the cluster.
+
+-   [ ] Kubernetes Cluster Autoscaler automatically adjusts the number of nodes in the EKS cluster based on the needs of the pods.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    Using Lambda to resize the EKS cluster adds complexity and requires custom code.
+-   [ ] D.
+    API Gateway is for managing APIs, not for scaling EKS clusters.
+-   [ ] E.
+    App Mesh is for managing microservices communication, not for cluster scaling.
+
+Therefore, Options B and C provide the most efficient and automated scaling solution.
+
+</details>
+<details>
+  <summary>Question 523</summary>
+
+A company runs a microservice-based serverless web application.
+The application must be able to retrieve data from multiple Amazon DynamoDB tables A solutions architect needs to give the application the ability to retrieve the data with no impact on the baseline performance of the application.
+Which solution will meet these requirements in the MOST operationally efficient way?
+
+-   [ ] A.
+    AWS AppSync pipeline resolvers
+-   [ ] B.
+    Amazon CloudFront with Lambda@Edge functions
+-   [ ] C.
+    Edge-optimized Amazon API Gateway with AWS Lambda functions
+-   [ ] D.
+    Amazon Athena Federated Query with a DynamoDB connector
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D.
+    Amazon Athena Federated Query with a DynamoDB connector
+
+Why these are the correct answers:
+
+D.
+Amazon Athena Federated Query with a DynamoDB connector
+
+-   [ ] Athena Federated Query allows you to query data across multiple data sources, including DynamoDB, with standard SQL.
+-   [ ] It is serverless and does not impact the performance of the application.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    AppSync is a GraphQL service, not designed for simple data retrieval from multiple DynamoDB tables in a RESTful manner.
+-   [ ] B.
+    CloudFront and Lambda@Edge are for content delivery and edge computing, not for querying databases.
+-   [ ] C.
+    API Gateway and Lambda can retrieve data, but it requires more code and management than Athena Federated Query.
+
+Therefore, Option D is the most operationally efficient solution.
+
+</details>
+<details>
+  <summary>Question 524</summary>
+
+A company wants to analyze and troubleshoot Access Denied errors and Unauthorized errors that are related to IAM permissions.
+The company has AWS CloudTrail turned on.
+Which solution will meet these requirements with the LEAST effort?
+
+-   [ ] A.
+    Use AWS Glue and write custom scripts to query CloudTrail logs for the errors.
+-   [ ] B.
+    Use AWS Batch and write custom scripts to query CloudTrail logs for the errors.
+-   [ ] C.
+    Search CloudTrail logs with Amazon Athena queries to identify the errors.
+-   [ ] D.
+    Search CloudTrail logs with Amazon QuickSight.
+    Create a dashboard to identify the errors.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C.
+    Search CloudTrail logs with Amazon Athena queries to identify the errors.
+
+Why these are the correct answers:
+
+C.
+Search CloudTrail logs with Amazon Athena queries to identify the errors.
+
+-   [ ] Amazon Athena allows you to query CloudTrail logs using SQL, making it efficient for analyzing specific error types.
+
+Why are the other answers wrong?
+
+-   [ ] A and B.
+    AWS Glue and AWS Batch require writing and managing custom scripts, which is more complex.
+-   [ ] D.
+    QuickSight is for visualizing data, not for directly querying logs.
+
+Therefore, Option C is the most efficient solution.
+
+</details>
+<details>
+  <summary>Question 525</summary>
+
+A company wants to add its existing AWS usage cost to its operation cost dashboard.
+A solutions architect needs to recommend a solution that will give the company access to its usage cost programmatically.
+The company must be able to access cost data for the current year and forecast costs for the next 12 months.
+Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A.
+    Access usage cost-related data by using the AWS Cost Explorer API with pagination.
+-   [ ] B.
+    Access usage cost-related data by using downloadable AWS Cost Explorer report.csv files.
+-   [ ] C.
+    Configure AWS Budgets actions to send usage cost data to the company through FTP.
+-   [ ] D.
+    Create AWS Budgets reports for usage cost data.
+    Send the data to the company through SMTP.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A.
+    Access usage cost-related data by using the AWS Cost Explorer API with pagination.
+
+Why these are the correct answers:
+
+A.
+Access usage cost-related data by using the AWS Cost Explorer API with pagination.
+
+-   [ ] The Cost Explorer API provides programmatic access to cost and usage data.
+-   [ ] Pagination allows for efficient retrieval of large datasets.
+
+Why are the other answers wrong?
+
+-   [ ] B.
+    Downloading CSV files is manual and not programmatic.
+-   [ ] C and D.
+    Budgets and their actions are for monitoring and alerting on costs, not for providing detailed cost data programmatically.
+    FTP and SMTP add complexity.
+
+Therefore, Option A is the most efficient solution.
+
+</details>
+<details>
+  <summary>Question 526</summary>
+
+A solutions architect is reviewing the resilience of an application.
+The solutions architect notices that a database administrator recently failed over the application's Amazon Aurora PostgreSQL database writer instance as part of a scaling exercise.
+The failover resulted in 3 minutes of downtime for the application.
+Which solution will reduce the downtime for scaling exercises with the LEAST operational overhead?
+
+-   [ ] A.
+    Create more Aurora PostgreSQL read replicas in the cluster to handle the load during failover.
+-   [ ] B.
+    Set up a secondary Aurora PostgreSQL cluster in the same AWS Region.
+    During failover, update the application to use the secondary cluster's writer endpoint.
+-   [ ] C.
+    Create an Amazon ElastiCache for Memcached cluster to handle the load during failover.
+-   [ ] D.
+    Set up an Amazon RDS proxy for the database.
+    Update the application to use the proxy endpoint.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D.
+    Set up an Amazon RDS proxy for the database.
+    Update the application to use the proxy endpoint.
+
+Why these are the correct answers:
+
+D.
+Set up an Amazon RDS proxy for the database.
+Update the application to use the proxy endpoint.
+
+-   [ ] Amazon RDS Proxy minimizes downtime during failovers by maintaining database connections.
+-   [ ] It is transparent to the application, reducing operational overhead.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    Read replicas do not reduce downtime during writer instance failovers.
+-   [ ] B.
+    Setting up a secondary cluster and updating the application endpoint adds complexity.
+-   [ ] C.
+    ElastiCache is for caching, not for database failovers.
+
+Therefore, Option D is the most efficient solution.
+
+</details>
+<details>
+  <summary>Question 527</summary>
+
+A company has a regional subscription-based streaming service that runs in a single AWS Region.
+The architecture consists of web servers and application servers on Amazon EC2 instances.
+The EC2 instances are in Auto Scaling groups behind Elastic Load Balancers.
+The architecture includes an Amazon Aurora global database cluster that extends across multiple Availability Zones.
+The company wants to expand globally and to ensure that its application has minimal downtime.
+Which solution will provide the MOST fault tolerance?
+
+-   [ ] A.
+    Extend the Auto Scaling groups for the web tier and the application tier to deploy instances in Availability Zones in a second Region.
+    Use an Aurora global database to deploy the database in the primary Region and the second Region.
+    Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+-   [ ] B.
+    Deploy the web tier and the application tier to a second Region.
+    Add an Aurora PostgreSQL cross-Region Aurora Replica in the second Region.
+    Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+    Promote the secondary to primary as needed.
+-   [ ] C.
+    Deploy the web tier and the application tier to a second Region.
+    Create an Aurora PostgreSQL database in the second Region.
+    Use AWS Database Migration Service (AWS DMS) to replicate the primary database to the second Region.
+    Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+-   [ ] D.
+    Deploy the web tier and the application tier to a second Region.
+    Use an Amazon Aurora global database to deploy the database in the primary Region and the second Region.
+    Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+    Promote the secondary to primary as needed.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D.
+    Deploy the web tier and the application tier to a second Region.
+    Use an Amazon Aurora global database to deploy the database in the primary Region and the second Region.
+    Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+    Promote the secondary to primary as needed.
+
+Why these are the correct answers:
+
+D.
+Deploy the web tier and the application tier to a second Region.
+Use an Amazon Aurora global database to deploy the database in the primary Region and the second Region.
+Use Amazon Route 53 health checks with a failover routing policy to the second Region.
+Promote the secondary to primary as needed.
+
+-   [ ] Deploying the application tiers in a second Region provides redundancy.
+-   [ ] Aurora global database ensures database replication across Regions.
+-   [ ] Route 53 health checks and failover routing enable automatic failover.
+-   [ ] Promoting the secondary to primary allows for controlled failover.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    Extending Auto Scaling groups across Regions is not the most efficient way to achieve regional redundancy.
+-   [ ] B.
+    Aurora Replicas are for read scaling, not for failover with minimal downtime.
+    Manual promotion adds complexity.
+-   [ ] C.
+    DMS is for database migration, not for continuous replication for failover.
+
+Therefore, Option D provides the most fault-tolerant solution.
+
+</details>
+<details>
+  <summary>Question 528</summary>
+
+A data analytics company wants to migrate its batch processing system to AWS.
+The company receives thousands of small data files periodically during the day through FTP.
+An on-premises batch job processes the data files overnight.
+However, the batch job takes hours to finish running.
+The company wants the AWS solution to process incoming data files as soon as possible with minimal changes to the FTP clients that send the files.
+The solution must delete the incoming data files after the files have been processed successfully.
+Processing for each file needs to take 3-8 minutes.
+Which solution will meet these requirements in the MOST operationally efficient way?
+
+-   [ ] A.
+    Use an Amazon EC2 instance that runs an FTP server to store incoming files as objects in Amazon S3 Glacier Flexible Retrieval.
+    Configure a job queue in AWS Batch.
+    Use Amazon EventBridge rules to invoke the job to process the objects nightly from S3 Glacier Flexible Retrieval.
+    Delete the objects after the job has processed the objects.
+-   [ ] B.
+    Use an Amazon EC2 instance that runs an FTP server to store incoming files on an Amazon Elastic Block Store (Amazon EBS) volume.
+    Configure a job queue in AWS Batch.
+    Use Amazon EventBridge rules to invoke the job to process the files nightly from the EBS volume.
+    Delete the files after the job has processed the files.
+-   [ ] C.
+    Use AWS Transfer Family to create an FTP server to store incoming files on an Amazon Elastic Block Store (Amazon EBS) volume.
+    Configure a job queue in AWS Batch.
+    Use an Amazon S3 event notification when each file arrives to invoke the job in AWS Batch.
+    Delete the files after the job has processed the files.
+-   [ ] D.
+    Use AWS Transfer Family to create an FTP server to store incoming files in Amazon S3 Standard.
+    Create an AWS Lambda function to process the files and to delete the files after they are processed.
+    Use an S3 event notification to invoke the Lambda function when the files arrive.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D.
+    Use AWS Transfer Family to create an FTP server to store incoming files in Amazon S3 Standard.
+    Create an AWS Lambda function to process the files and to delete the files after they are processed.
+    Use an S3 event notification to invoke the Lambda function when the files arrive.
+
+Why these are the correct answers:
+
+D.
+Use AWS Transfer Family to create an FTP server to store incoming files in Amazon S3 Standard.
+Create an AWS Lambda function to process the files and to delete the files after they are processed.
+Use an S3 event notification to invoke the Lambda function when the files arrive.
+
+-   [ ] AWS Transfer Family provides a managed FTP server.
+-   [ ] Lambda functions can process files immediately upon arrival in S3.
+-   [ ] S3 event notifications trigger Lambda, enabling near real-time processing.
+-   [ ] Lambda can delete files after processing.
+
+Why are the other answers wrong?
+
+-   [ ] A and B.
+    Using EC2 for FTP servers requires more management.
+    AWS Batch is for batch processing, not for immediate file processing.
+    S3 Glacier is for archival, not for immediate processing.
+-   [ ] C.
+    Using EBS for FTP storage adds complexity.
+    Batch is not suitable for immediate processing.
+
+Therefore, Option D is the most efficient solution.
+
+</details>
+<details>
+  <summary>Question 529</summary>
+
+A company is migrating its workloads to AWS. The company has transactional and sensitive data in its databases.
+The company wants to use AWS Cloud solutions to increase security and reduce operational overhead for the databases.
+Which solution will meet these requirements?
+
+-   [ ] A.
+    Migrate the databases to Amazon EC2.
+    Use an AWS Key Management Service (AWS KMS) AWS managed key for encryption.
+-   [ ] B.
+    Migrate the databases to Amazon RDS Configure encryption at rest.
+-   [ ] C.
+    Migrate the data to Amazon S3 Use Amazon Macie for data security and protection
+-   [ ] D.
+    Migrate the database to Amazon RDS.
+    Use Amazon CloudWatch Logs for data security and protection.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B.
+    Migrate the databases to Amazon RDS Configure encryption at rest.
+
+Why these are the correct answers:
+
+B.
+Migrate the databases to Amazon RDS Configure encryption at rest.
+
+-   [ ] Amazon RDS is a managed database service that reduces operational overhead.
+-   [ ] RDS supports encryption at rest, providing data security.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    EC2 requires more management than RDS.
+-   [ ] C.
+    S3 is object storage, not suitable for transactional data.
+    Macie is for data discovery, not database security.
+-   [ ] D.
+    CloudWatch Logs is for logging, not for database security.
+
+Therefore, Option B is the most suitable solution.
+
+</details>
+<details>
+  <summary>Question 530</summary>
+
+A company has an online gaming application that has TCP and UDP multiplayer gaming capabilities.
+The company uses Amazon Route 53 to point the application traffic to multiple Network Load Balancers (NLBs) in different AWS Regions.
+The company needs to improve application performance and decrease latency for the online game in preparation for user growth.
+Which solution will meet these requirements?
+
+-   [ ] A.
+    Add an Amazon CloudFront distribution in front of the NLBs.
+    Increase the Cache-Control max- age parameter.
+-   [ ] B.
+    Replace the NLBs with Application Load Balancers (ALBs).
+    Configure Route 53 to use latency- based routing.
+-   [ ] C.
+    Add AWS Global Accelerator in front of the NLBs.
+    Configure a Global Accelerator endpoint to use the correct listener ports.
+-   [ ] D.
+    Add an Amazon API Gateway endpoint behind the NLBs.
+    Enable API caching.
+    Override method caching for the different stages.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C.
+    Add AWS Global Accelerator in front of the NLBs.
+    Configure a Global Accelerator endpoint to use the correct listener ports.
+
+Why these are the correct answers:
+
+C.
+Add AWS Global Accelerator in front of the NLBs.
+Configure a Global Accelerator endpoint to use the correct listener ports.
+
+-   [ ] AWS Global Accelerator improves performance for global applications by routing traffic through AWS's global network.
+-   [ ] It supports both TCP and UDP, which is essential for gaming applications.
+
+Why are the other answers wrong?
+
+-   [ ] A.
+    CloudFront is a CDN and is not optimized for real-time, low-latency traffic like gaming.
+-   [ ] B.
+    ALBs are for HTTP/HTTPS traffic, not TCP/UDP.
+    Route 53 latency-based routing does not provide the same performance improvements as Global Accelerator.
+-   [ ] D.
+    API Gateway is for API management, not for gaming traffic.
+
+Therefore, Option C is the most suitable solution.
+
+</details>
 
 
 
